Opened 12 years ago

Closed 12 years ago

#813 closed defect (fixed)

OpenJPEG based JPEG 2000 encoder missing pix_fmts termination token

Reported by: Greg Mulvihill Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords:
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Line 375 in libopenjpegenc.c appears to be be missing the PIX_FMT_NONE termination token.

https://github.com/FFmpeg/FFmpeg/blob/40c36196d555496269656dd9f15c8520fa2301cd/libavcodec/libopenjpegenc.c

Change History (2)

comment:1 by Carl Eugen Hoyos, 12 years ago

Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Please consider sending a patch to ffmpeg-devel.

comment:2 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.